--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -6,7 +6,7 @@
   <div class="container py-5">
     <h1>Лента записей</h1>                        
     <!-- Перебираем в цикле все посты -->
-    {% for post in posts_list reversed %}
+    {% for post in posts_list %}
       
       <hr>
       <article>
