--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -9,14 +9,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Блогикум{% endblock %}</title>
   </head>
   <body>
     {% include "includes/header.html" %}
   </body>
   <main>
-    {% block content %}
-    {% endblock %}
+    <div class="container py-5">   
+      {% block content %}
+      {% endblock %}
+    </div>
   </main>
   {% include "includes/footer.html" %}  
 </html>
