--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,8 +3,7 @@
   Лента записей
 {% endblock %}
 {% block content %}
-  <h1>Лента записей</h1>                        
-  <!-- Перебираем в цикле все посты -->
+  <h1>Лента записей</h1>
   {% for post in posts_list %}
     <hr>
     <article>
@@ -20,7 +19,7 @@
         </li>
       </ul>
       <p>
-        {{ post.text|truncatewords:10 }}
+        {{ post.text|linebreaks|truncatewords:10 }}
       </p>
       <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
     </article>
